POWR-1992 Add back border to prevent layout shift

--- a/web/themes/custom/cloudy/src/components/_nav.scss
+++ b/web/themes/custom/cloudy/src/components/_nav.scss
@@ -6,9 +6,9 @@
   a.nav-link {
     font-weight: $font-weight-semibold;
   }
-  // a {
-  //   border-bottom: 2px solid $white;
-  // }
+  a {
+    border-bottom: 2px solid transparent;
+  }
   a:hover {
     border-bottom: 2px solid $cloudy-color-blue-500;
   }
